--- a/docs/css/countdown.css
+++ b/docs/css/countdown.css
@@ -24,7 +24,7 @@ body {
 
 // COUNTDOWN STYLES
 .countdown {
-  text-align: center;
+  text-align: right;
   font-size: 16px;
   font-family: $main-font;
   background: nth($palette, 1);
@@ -186,7 +186,7 @@ body {
 @media screen and (max-width: 480px) {
   .timer {
     .box {
-      margin: 1rem 0.5rem;
+      margin: 10rem 0.5rem;
       width: 8rem;
     }
   }
